DataSet20000/Train/Bug/927449.txt
Display the line or column number of the error when the manifest.webapp file is not a valid file
"permissions": {
    "desktop-notification": {
        "description" : "To show notifications"
    },
    "geolocation": {
        "description" : "Marking out user location"
    },
    "systemXHR": {
        "description" : "To get systemXHR",
                                         ^^^ comma should not be here
    }
},

===

This sample portion of the manifest.webapp file will cause app manager to fail with the following error:


The webapp manifest isn't a valid JSON file: SyntaxError: JSON.parse: expected double-quoted property name at: file:///Users/skywalker/trees/boilerplateAppFxOS/manifest.webapp


(the cause is known: an accidental additional comma at the end of the description for systemXHR)

However, there is no easy way of deducing the error, because the line/column number of the error is not shown. If one has a large JSON file, one will have to look through the entire file to find the location of the error manually.

In this example, one participant of an app contest (involving Firefox OS apps) had to debug this line by line / character by character to get to the root of the error cause.